# RiPOcam

./: README.md  pyproject.toml
ripo_cam/: config.ini  config.py  main.py
training/: convert-kitti-to-yolo.py  labels  yolo_training.py  yolov8.yaml
training/dataset_kitty/yolo/: dataset.yaml
training/dataset_kitty/yolo/labels/train/: 000001.txt  000002.txt  000003.txt  000004.txt  000006.txt  000007.txt  000008.txt  000009.txt  000011.txt  000012.txt  000013.txt  000014.txt  000016.txt  000017.txt  000018.txt  000019.txt  000021.txt  000022.txt  000023.txt  000024.txt  000027.txt  000028.txt  000029.txt  000031.txt  000032.txt  000033.txt  000034.txt  000036.txt  000037.txt  000038.txt  000039.txt  000041.txt  000042.txt  000043.txt  000044.txt  000046.txt  000047.txt  000048.txt  000049.txt  000051.txt  (+5405 more)
training/dataset_kitty/yolo/labels/val/: 000000.txt  000005.txt  000010.txt  000015.txt  000025.txt  000030.txt  000035.txt  000040.txt  000045.txt  000055.txt  000060.txt  000065.txt  000070.txt  000075.txt  000080.txt  000085.txt  000100.txt  000105.txt  000115.txt  000120.txt  000125.txt  000130.txt  000135.txt  000145.txt  000150.txt  000155.txt  000160.txt  000165.txt  000175.txt  000180.txt  000185.txt  000190.txt  000195.txt  000200.txt  000205.txt  000210.txt  000220.txt  000225.txt  000230.txt  000235.txt  (+1297 more)
training/yolov8n_mot_ch4/: args.yaml  results.csv
training/yolov8n_mot_ch4_70/: results.csv
training/yolov8n_mot_ch4_84/: results.csv
utility/: .load_image.py.swp  load.py
