[tool.poetry]
name = "ripo_cam"
version = "0.1.0"
description = ""
authors = ["Kacper Filipiak <kisielWrosole@gmail.com>"]
readme = "README.md"
packages=[{ include = "**/*" }]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
