[tool.poetry]
name = "ripo_cam"
version = "0.1.0"
description = ""
authors = ["Kacper Filipiak <kisielWrosole@gmail.com>"]
readme = "README.md"
packages=[{ include = "**/*" }]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.9.0.80"
pyqt6 = "^6.7.0"
ultralytics = "^8.2.14"
simpleaudio = "^1.0.4"
nava = "^0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
